[.awesomerc.lua] add vim modeline

--- a/.mc/history
+++ b/.mc/history
@@ -46,15 +46,20 @@
 6=cd /data/anime
 7=smplayer \[Eclipse\]\ Code\ Geass\ -\ Lelouch\ of\ the\ Rebellion\ R2\ -\ 08\ \(1280x720\ h264\)\ \[6CC82EDB\].mkv 
 8=`
-9=q
-10=cd Nabari no Ou/
-11=xine \[AonE_-_Conclave\]_Nabari_no_Ou_-_01_\[XviD\]\[704x396\]\[E574B19D\].avi 
-12=smplayer Futurama\ -\ S05E10\ -\ The\ Farnsworth\ Parabox\ \[dd\].avi 
-13=smplayer Futurama\ -\ S05E11\ -\ Three\ Hundred\ Big\ Boys\ \[dd\].avi 
-14=smplayer Futurama\ -\ S05E12\ -\ Spanish\ Fry\ \[dd\].avi 
-15=cd anime/
-16=cd Kanokon/
-17=cd /mnt/data-2
+9=cd Nabari no Ou/
+10=xine \[AonE_-_Conclave\]_Nabari_no_Ou_-_01_\[XviD\]\[704x396\]\[E574B19D\].avi 
+11=smplayer Futurama\ -\ S05E10\ -\ The\ Farnsworth\ Parabox\ \[dd\].avi 
+12=cd anime/
+13=cd Kanokon/
+14=cd /mnt/data-2
+15=smplayer Futurama\ -\ S05E11\ -\ Three\ Hundred\ Big\ Boys\ \[dd\].avi 
+16=smplayer Futurama\ -\ S05E12\ -\ Spanish\ Fry\ \[dd\].avi 
+17=smplayer 
+18=smplayer Futurama\ -\ S05E13\ -\ Bend\ Her\ \[dd\].avi 
+19=smplayer Futurama\ -\ S05E14\ -\ Obsoletely\ Fabulous\ \[dd\].avi 
+20=smplayer Futurama\ -\ S05E15\ -\ Bender\ Should\ Not\ Be\ Allowed\ On\ TV\ \[dd\].avi 
+21=smplayer Futurama\ -\ S05E16\ -\ The\ Devil\'s\ Hands\ Are\ Idle\ Playthings\ \[dd\].avi 
+22=q
 
 [Dir Hist New Right Panel]
 0=/boot
@@ -75,27 +80,41 @@
 15=/data/series/Rules of Engagement/rules_of_engagement
 16=/data/series/Rules of Engagement
 17=/
-18=/home/archlucas/.gnupg
-19=/home/archlucas/.gimp-2.4/tmp
-20=/home/archlucas/.gimp-2.4
-21=/home/archlucas/.vim/EnhancedCommentify-2.3
-22=/home/archlucas/.vim/ftplugin
-23=/home/archlucas/.vim/doc/EnhancedCommentify-2.3/doc
-24=/home/archlucas/.vim/doc/EnhancedCommentify-2.3
-25=/home/archlucas/.vim
-26=/home/archlucas/.vim/doc
-27=/data/anime/Code Geass R2
-28=/home/archlucas
-29=/data/anime/Nabari no Ou
-30=/data/.backups
-31=/data/projects
-32=/data/series
-33=/data/series/Futurama
-34=/data/series/Futurama/Futurama
-35=/data/series/Futurama/Futurama/Futurama - Season 5
-36=/data/anime
-37=/data/anime/Kanokon
-38=/data
-39=/mnt/data-2/VirtualXP
-40=/mnt/data-2/writings
-41=/mnt/data-2
+18=/home/archlucas/.gimp-2.4/tmp
+19=/home/archlucas/.gimp-2.4
+20=/home/archlucas/.vim/EnhancedCommentify-2.3
+21=/home/archlucas/.vim/ftplugin
+22=/home/archlucas/.vim/doc/EnhancedCommentify-2.3/doc
+23=/home/archlucas/.vim/doc/EnhancedCommentify-2.3
+24=/home/archlucas/.vim
+25=/home/archlucas/.vim/doc
+26=/data/anime/Code Geass R2
+27=/data/anime/Nabari no Ou
+28=/data/.backups
+29=/data/projects
+30=/data/anime
+31=/data/anime/Kanokon
+32=/mnt/data-2/VirtualXP
+33=/mnt/data-2/writings
+34=/mnt/data-2
+35=/data
+36=/data/series
+37=/data/series/Futurama
+38=/data/series/Futurama/Futurama
+39=/data/series/Futurama/Futurama/Futurama - Season 5
+40=/home/archlucas/.config/evince
+41=/home/archlucas/.config/autostart
+42=/home/archlucas/.config/menus/applications-merged
+43=/home/archlucas/.config/menus
+44=/home/archlucas/.config
+45=/home/archlucas/.icons
+46=/home/archlucas/.gnome2_private
+47=/home/archlucas/.gnome2/gedit
+48=/home/archlucas/.gnome2
+49=/home/archlucas/.gnome
+50=/home/archlucas/.gnupg
+51=/home/archlucas/.wapi
+52=/home/archlucas/.themes
+53=/home/archlucas/pictures
+54=/home/archlucas/torrents
+55=/home/archlucas
